--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "from textblob import TextBlob\n",
-    "from transformers import pipeline\n"
+    "from transformers import pipeline"
    ]
   },
   {
