--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b0fe5f56-595e-4128-8767-ec5385fa2223",
    "metadata": {},
    "outputs": [],
@@ -20,139 +20,38 @@
     "from pyspark.sql.types import StructType, StructField, StringType, IntegerType, FloatType\n",
     "import os\n",
     "\n",
-    "from utils import DataLoader\n"
+    "from DataLoader import DataLoader\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "96132ffa",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/03/11 14:21:45 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-1.csv\n",
-      "24/03/11 14:21:45 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-6.csv\n",
-      "24/03/11 14:21:45 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-7.csv\n",
-      "24/03/11 14:21:45 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-8.csv\n",
-      "24/03/11 14:21:45 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-4.csv\n",
-      "24/03/11 14:21:45 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-3.csv\n",
-      "24/03/11 14:21:45 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-5.csv\n",
-      "24/03/11 14:21:45 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-2.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed 0 duplicate rows.\n"
+     "ename": "TypeError",
+     "evalue": "DataLoader.__init__() missing 1 required positional argument: 'data_set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m loader \u001b[38;5;241m=\u001b[39m \u001b[43mDataLoader\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m train_df \u001b[38;5;241m=\u001b[39m loader\u001b[38;5;241m.\u001b[39mtrain_df\n",
+      "\u001b[0;31mTypeError\u001b[0m: DataLoader.__init__() missing 1 required positional argument: 'data_set'"
      ]
     }
    ],
    "source": [
-    "loader = DataLoader()\n",
+    "loader = DataLoader(data_set=\"train\")\n",
     "train_df = loader.train_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3271f204-4688-4199-84d5-aba49ab05b73",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/03/11 14:21:58 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-4.csv\n",
-      "24/03/11 14:21:58 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-7.csv\n",
-      "24/03/11 14:21:58 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-2.csv\n",
-      "24/03/11 14:21:58 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-5.csv\n",
-      "24/03/11 14:21:58 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-3.csv\n",
-      "24/03/11 14:21:58 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-8.csv\n",
-      "24/03/11 14:21:58 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-6.csv\n",
-      "24/03/11 14:21:58 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
-      "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/train-1.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+----------+--------------+-------------+----+-----------------+---------------+-----------+-----------+--------------+-------------------+-----+\n",
-      "| id|product_id|product_parent|product_title|vine|verified_purchase|review_headline|review_body|review_date|marketplace_id|product_category_id|label|\n",
-      "+---+----------+--------------+-------------+----+-----------------+---------------+-----------+-----------+--------------+-------------------+-----+\n",
-      "|  0|         0|             0|           64|   0|                0|            636|          0|          1|             0|                  0|    0|\n",
-      "+---+----------+--------------+-------------+----+-----------------+---------------+-----------+-----------+--------------+-------------------+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Count missing values in each column\n",
     "missing_value_counts = train_df.select([count(when(isnan(c) | col(c).isNull(), c)).alias(c) for c in train_df.columns])\n",
