--- a/data.ipynb
+++ b/data.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "96132ffa",
    "metadata": {},
    "outputs": [
@@ -34,14 +34,64 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/03/11 14:56:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/03/11 14:56:38 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id\n",
-      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id\n",
+      "Java HotSpot(TM) 64-Bit Server VM warning: CodeCache is full. Compiler has been disabled.\n",
+      "Java HotSpot(TM) 64-Bit Server VM warning: Try increasing the code cache size using -XX:ReservedCodeCacheSize=\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CodeCache: size=131072Kb used=30067Kb max_used=30091Kb free=101004Kb\n",
+      " bounds [0x000000010a1e0000, 0x000000010bf70000, 0x00000001121e0000]\n",
+      " total_blobs=11082 nmethods=10130 adapters=863\n",
+      " compilation: disabled (not enough contiguous free space left)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/03/11 15:00:30 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
       "Expected: id but found: \n",
-      "CSV file: file:///Users/julius/repos/BD-Project/data/validation_hidden.csv\n"
+      "CSV file: file:///Users/julius/repos/BD-Project/data/train-6.csv\n",
+      "24/03/11 15:00:30 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      "Expected: id but found: \n",
+      "CSV file: file:///Users/julius/repos/BD-Project/data/train-4.csv\n",
+      "24/03/11 15:00:30 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      "Expected: id but found: \n",
+      "CSV file: file:///Users/julius/repos/BD-Project/data/train-2.csv\n",
+      "24/03/11 15:00:30 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      "Expected: id but found: \n",
+      "CSV file: file:///Users/julius/repos/BD-Project/data/train-5.csv\n",
+      "24/03/11 15:00:30 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      "Expected: id but found: \n",
+      "CSV file: file:///Users/julius/repos/BD-Project/data/train-7.csv\n",
+      "24/03/11 15:00:30 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      "Expected: id but found: \n",
+      "CSV file: file:///Users/julius/repos/BD-Project/data/train-8.csv\n",
+      "24/03/11 15:00:30 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      "Expected: id but found: \n",
+      "CSV file: file:///Users/julius/repos/BD-Project/data/train-1.csv\n",
+      "24/03/11 15:00:30 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: , product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      " Schema: id, product_id, product_parent, product_title, vine, verified_purchase, review_headline, review_body, review_date, marketplace_id, product_category_id, label\n",
+      "Expected: id but found: \n",
+      "CSV file: file:///Users/julius/repos/BD-Project/data/train-3.csv\n"
      ]
     },
     {
